model integration progress

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -9,12 +9,14 @@
 
 <body>
   <div class="flex-row tib-box">
-    <button id="take-picture">
+    <button>
       <a href="./scan.html">
         <img src="/imgs/take-img-button.png" style="height: 70px;">  
       </a>
     </button>
   </div>
+
+  
 
   <div class="flex-col content-box">
 
