--- a/src/html/login.html
+++ b/src/html/login.html
@@ -37,7 +37,7 @@
       <div class="light-text" style="margin-left: 4px; font-size:13px;">
         By continuing you agree to our
       </div>
-      <a class="light-text" style="color: #74B9BA; margin-left: 4px; font-size:13px;" href="/html/privacy-policy.html">
+      <a class="light-text" style="color: #74B9BA; margin-left: 4px; font-size:13px;" target="_blank" href="https://www.theplasticproject.org/privacy-policy">
         Privacy Policy
       </a>
     </div>
