--- a/src/html/home.html
+++ b/src/html/home.html
@@ -8,204 +8,205 @@
 </head>
 
 <body>
-  <div class="flex-row tib-box">
-    <button>
-      <a href="./scan.html">
-        <img src="/imgs/take-img-button.png" style="height: 70px;">  
-      </a>
-    </button>
-  </div>
 
+  <iconify-icon id="loading-circle" icon="line-md:loading-twotone-loop" width="50" height="50" class="loading-icon" style="z-index:2"></iconify-icon>
   
+  <div id="content" class="blur-effect">
 
-  <div class="flex-col content-box">
-
-    <div class="flex-row" style="justify-content: space-between;">
-      <div class="subtitle-1">
-        <p>Hello, John</p>
-      </div>
-      <a id="signoutbtn">
-        <img src="/imgs/log-icon.png" alt="log out button">
-      </a>
+    <div class="flex-row tib-box">
+      <button>
+        <a href="./scan.html">
+          <img src="/imgs/take-img-button.png" style="height: 70px;">  
+        </a>
+      </button>
     </div>
 
-
-    <div class="title-1">
-      Welcome Back!
-    </div>
-
-    <div class="flex-col shadow-box summary-box">
-      <div class="sb-title">
-        So far, you've saved
-      </div>
-      <p class="sb-lgnum" id="total-co2">
-        213 lbs of CO2
-      </p>
-      <div class="flex-row info-box">
-        <div class="flex-col ib-col">
-          <p class="ib-num" id="challenges-completed">
-            10
-          </p>
-          <div class="ib-text">
-            challenges completed
-          </div>
-        </div>
-        <div class="vl"></div>
-        <div class="flex-col ib-col">
-          <p class="ib-num" id="items-recycled">
-            312
-          </p>
-          <div class="ib-text">
-            items recycled
-          </div>
-        </div>
-        <div class="vl"></div>
-        <div class="flex-col ib-col">
-          <p class="ib-num" id="badges-collected">
-            3
-          </p>
-          <div class="ib-text">
-            badges collected
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="heading-1">
-      Weekly challenges
-    </div>
-
-    <div class="flex-row shadow-box chall-box">
-      <div class="flex-col chall-col">
-        <p class="light-text chall-text" id="challenge-1-item">
-          Plastic recycled
-        </p>
-        <p class="regular-text chall-text" id="challenge-1-num">
-          4/10 items
-        </p>
-        <div class="progbar progbar-back">
-          <!-- width can be changed here to fill up bar -->
-          <div class="progbar progbar-fill" style="width: 40%;" id="progbar-1"></div>
-        </div>
-      </div>
-      <div class="flex-col chall-img-box">
-        <img src="/imgs/plastic-graphic.png" alt="Plastic bottle" style="height: 89px;" id="challenge-1-img">
-      </div>
-    </div>
-
-    <div class="flex-row shadow-box chall-box">
-      <div class="flex-col chall-col">
-        <p class="light-text chall-text" id="challenge-2-item">
-          Cardboard recycled
-        </p>
-        <p class="regular-text chall-text" id="challenge-2-num">
-          8/10 items
-        </p>
-        <div class="progbar progbar-back">
-          <!-- width can be changed here to fill up bar -->
-          <div class="progbar progbar-fill" style="width: 80%;" id="progbar-2"></div>
-        </div>
-      </div>
-      <div class="flex-col chall-img-box">
-        <img src="/imgs/box-graphic.png" alt="Cardboard box" style="height: 74px;" id="challenge-2-img">
-      </div>
-    </div>
-
-    <div class="heading-1">
-      Your rewards
-    </div>
-
-    <div class="flex-row scroll-row">
-
-      <div class="flex-col shadow-box semi-sq">
-        <div class="flex-col ss-img-box">
-          <img src="/imgs/gold-graphic.png" alt="Gold Trophy" style="height: 79px;">
-        </div>
-        <div class="regular-text ss-text">
-          Gold Cup
-        </div>
-        <div class="light-text ss-text">
-          Complete 10 weekly challenges
-        </div>
-      </div>
-
-      <div class="flex-col shadow-box semi-sq">
-        <div class="flex-col ss-img-box">
-          <img src="/imgs/silver-graphic.png" alt="Silver Trophy" style="height: 79px;">
-        </div>
-        <div class="regular-text ss-text">
-          Silver Cup
-        </div>
-        <div class="light-text ss-text">
-          Complete 5 weekly challenges
-        </div>
-      </div>
-
-      <div class="flex-col shadow-box semi-sq">
-        <div class="flex-col ss-img-box">
-          <img src="/imgs/robot-graphic.png" alt="Robot" style="height: 79px;">
-        </div>
-        <div class="regular-text ss-text">
-          Robot Cup
-        </div>
-        <div class="light-text ss-text">
-          Drop off e-waste at a recycling location
-        </div>
-      </div>
-
-    </div>
-
-    <div class="heading-1">
-      What do I do with...
-    </div>
-
-    <div class="flex-row scroll-row">
-
-      <div class="flex-col shadow-box semi-sq">
-        <div class="flex-col ss-img-box">
-          <img src="/imgs/plastic-graphic.png" alt="Plastic Bottle" style="height: 79px;">
-        </div>
-        <div class="regular-text ss-text">
-          Plastic
-        </div>
-        <div class="light-text ss-text">
-          Not as simple as you may think
-        </div>
-      </div>
-
-      <div class="flex-col shadow-box semi-sq">
-        <div class="flex-col ss-img-box">
-          <img src="/imgs/box-graphic.png" alt="Cardboard box" style="height: 79px;">
-        </div>
-        <div class="regular-text ss-text">
-          Cardboard
-        </div>
-        <div class="light-text ss-text">
-          Make sure to follow some basic steps
-        </div>
-      </div>
-
-      <div class="flex-col shadow-box semi-sq">
-        <div class="flex-col ss-img-box">
-          <img src="/imgs/metal-graphic.png" alt="Metal I-beam" style="height: 79px;">
-        </div>
-        <div class="regular-text ss-text">
-          Metal
-        </div>
-        <div class="light-text ss-text">
-          Simple, but with some exceptions
-        </div>
-      </div>
-
-    </div>
-
-    <div class="heading-1">
-      Local recycling centers
-    </div>
-
-    <img src="/imgs/map.png" alt="Map of local recycling centers">
-
-    <script src="../main.bundle.js"></script>
     
+
+    <div class="flex-col content-box">
+
+      <div class="flex-row" style="justify-content: space-between;">
+        <div class="subtitle-1">
+          <p>Hello, John</p>
+        </div>
+        <a id="signoutbtn">
+          <img src="/imgs/log-icon.png" alt="log out button">
+        </a>
+      </div>
+
+
+      <div class="title-1">
+        Welcome Back!
+      </div>
+
+      <div class="flex-col shadow-box summary-box">
+        <div class="sb-title">
+          So far, you've saved
+        </div>
+        <p class="sb-lgnum" id="total-co2">
+          0.00 lbs of CO2
+        </p>
+        <div class="flex-row info-box">
+          <div class="flex-col ib-col">
+            <p class="ib-num" id="challenges-completed">
+              0
+            </p>
+            <div class="ib-text">
+              challenges completed
+            </div>
+          </div>
+          <div class="vl"></div>
+          <div class="flex-col ib-col">
+            <p class="ib-num" id="items-recycled">
+              0
+            </p>
+            <div class="ib-text">
+              items recycled
+            </div>
+          </div>
+          <div class="vl"></div>
+          <div class="flex-col ib-col">
+            <p class="ib-num" id="badges-collected">
+              0
+            </p>
+            <div class="ib-text">
+              badges collected
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="heading-1">
+        Weekly challenges
+      </div>
+
+      <div class="flex-row shadow-box chall-box">
+        <div class="flex-col chall-col">
+          <p class="light-text chall-text" id="challenge-1-item">
+            [Item] recycled
+          </p>
+          <p class="regular-text chall-text" id="challenge-1-num">
+            0/10 items
+          </p>
+          <div class="progbar progbar-back">
+            <!-- width can be changed here to fill up bar -->
+            <div class="progbar progbar-fill" style="width: 40%;" id="progbar-1"></div>
+          </div>
+        </div>
+        <div class="flex-col chall-img-box">
+          <img alt="Plastic bottle" style="height: 89px;" id="challenge-1-img">
+        </div>
+      </div>
+
+      <div class="flex-row shadow-box chall-box">
+        <div class="flex-col chall-col">
+          <p class="light-text chall-text" id="challenge-2-item">
+            [Item] recycled
+          </p>
+          <p class="regular-text chall-text" id="challenge-2-num">
+            0/10 items
+          </p>
+          <div class="progbar progbar-back">
+            <!-- width can be changed here to fill up bar -->
+            <div class="progbar progbar-fill" style="width: 80%;" id="progbar-2"></div>
+          </div>
+        </div>
+        <div class="flex-col chall-img-box">
+          <img alt="Cardboard box" style="height: 74px;" id="challenge-2-img">
+        </div>
+      </div>
+
+      <div class="heading-1">
+        Your rewards
+      </div>
+
+      <div class="flex-row scroll-row" id="rewards-div">
+  <!-- 
+        <div class="flex-col shadow-box semi-sq">
+          <div class="flex-col ss-img-box">
+            <img src="/imgs/gold-graphic.png" alt="Gold Trophy" style="height: 79px;">
+          </div>
+          <div class="regular-text ss-text">
+            Gold Cup
+          </div>
+          <div class="light-text ss-text">
+            Complete 10 weekly challenges
+          </div>
+        </div>
+
+        <div class="flex-col shadow-box semi-sq">
+          <div class="flex-col ss-img-box">
+            <img src="/imgs/silver-graphic.png" alt="Silver Trophy" style="height: 79px;">
+          </div>
+          <div class="regular-text ss-text">
+            Silver Cup
+          </div>
+          <div class="light-text ss-text">
+            Complete 5 weekly challenges
+          </div>
+        </div>
+
+        <div class="flex-col shadow-box semi-sq">
+          <div class="flex-col ss-img-box">
+            <img src="/imgs/robot-graphic.png" alt="Robot" style="height: 79px;">
+          </div>
+          <div class="regular-text ss-text">
+            Robot Cup
+          </div>
+          <div class="light-text ss-text">
+            Drop off e-waste at a recycling location
+          </div>
+        </div> -->
+
+      </div>
+
+      <div class="heading-1">
+        What do I do with...
+      </div>
+
+      <div class="flex-row scroll-row">
+
+        <div class="flex-col shadow-box semi-sq">
+          <div class="flex-col ss-img-box">
+            <img src="/imgs/plastic.png" alt="Plastic Bottle" style="height: 79px;">
+          </div>
+          <div class="regular-text ss-text">
+            Plastic
+          </div>
+          <div class="light-text ss-text">
+            Not as simple as you may think
+          </div>
+        </div>
+
+        <div class="flex-col shadow-box semi-sq">
+          <div class="flex-col ss-img-box">
+            <img src="/imgs/box-graphic.png" alt="Cardboard box" style="height: 79px;">
+          </div>
+          <div class="regular-text ss-text">
+            Cardboard
+          </div>
+          <div class="light-text ss-text">
+            Make sure to follow some basic steps
+          </div>
+        </div>
+
+        <div class="flex-col shadow-box semi-sq">
+          <div class="flex-col ss-img-box">
+            <img src="/imgs/metal-graphic.png" alt="Metal I-beam" style="height: 79px;">
+          </div>
+          <div class="regular-text ss-text">
+            Metal
+          </div>
+          <div class="light-text ss-text">
+            Simple, but with some exceptions
+          </div>
+        </div>
+
+      </div>
+
+      <script src="../main.bundle.js"></script>
+      
+    </div>
   </div>
+
 </body>
