--- a/src/html/login.html
+++ b/src/html/login.html
@@ -14,11 +14,11 @@
 <body>
   <div class="flex-col content-box">
 
-    <img src="/imgs/sign-up-lg.png" alt="image" class="signup-img">
+    <img src="/imgs/fingerprint.jpg" alt="image" class="signup-img">
 
 
     <div class="header-1">
-      Log in
+      Welcome to RecycleScan!
     </div>
   
 
@@ -34,10 +34,10 @@
 
 
     <div class="flex-row" style="justify-content: center; margin-top: 40px">
-      <div class="light-text" style="margin-left: 4px; font-size:13px;">
+      <div class="light-text" style="margin-left: 4px; font-size:15px;">
         By continuing you agree to our
       </div>
-      <a class="light-text" style="color: #74B9BA; margin-left: 4px; font-size:13px;" target="_blank" href="https://www.theplasticproject.org/privacy-policy">
+      <a class="light-text" style="color: #74B9BA; margin-left: 4px; font-size:15px;" target="_blank" href="https://www.theplasticproject.org/privacy-policy">
         Privacy Policy
       </a>
     </div>
