--- a/src/scan.html
+++ b/src/scan.html
@@ -6,6 +6,7 @@
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
   <link rel="manifest" href="../manifest.json">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>    
       body {
           margin: 0;
@@ -39,9 +40,9 @@
 
 <body>
 
-  <iconify-icon id="loading-circle" icon="line-md:loading-twotone-loop" width="50" height="50" class="loading-icon" style="display:none; z-index:2"></iconify-icon>
+  <!-- <iconify-icon id="loading-circle" icon="line-md:loading-twotone-loop" width="50" height="50" class="loading-icon" style="display:none; z-index:2"></iconify-icon> -->
 
-  <video id="webcam" autoplay></video>
+  <video id="webcam" autoPlay playsInline muted></video>
   <canvas id="canvas" style="display: none;"></canvas>
   <div class="flex-row tib-box">
     <button id="captureButton">
@@ -52,19 +53,24 @@
   </div>
 
   <div id="mat-id" class="flex-col popup-box">
-    <img src="/imgs/check-icon.png" style="width: 40px;">
-    <div class="heading-1 pub-text">
-      Material Identified
-    </div>
-    <div class="light-text pub-text">
-      Click the arrow to see your results, track your items, and get one step closer to meeting your recycling goals!
-    </div>
-    <div id="load-first" class="flex-row pub-btn" style="margin-left:0">
-      <div class="light-text pub-btn-text">
-        See results
+    <iconify-icon id="start-loader" icon="line-md:loading-twotone-loop" width="40" height="40" style="z-index:2; color:black"></iconify-icon>
+    <div id="start-message" style="display:none">
+      <img src="/imgs/check-icon.png" style="width: 40px;">
+      <div class="heading-1 pub-text">
+        Material Identified
       </div>
-      <img src="/imgs/arrow.png" style="height: 15px;">
+      <div class="light-text pub-text">
+        Click the arrow to see your results, track your items, and get one step closer to meeting your recycling goals!
+      </div>
+      <div id="load-first" class="flex-row pub-btn" style="margin-left:0">
+        <div class="light-text pub-btn-text">
+          See results
+        </div>
+        <img src="/imgs/arrow.png" style="height: 15px;">
+      </div>  
     </div>
+
+
   </div>
   
 
@@ -106,57 +112,67 @@
   </div>
 
   <div id="lobe-popup" class="flex-col popup-box pub-id-box">
-    <div class="flex-row" style="margin-left: 45px;">
-      <div class="heading-1 pub-id-head" id="lobe-title">
-        Metal
-      </div>
-    </div>
-    <div class="light-text pub-id-text" id="lobe-description">
-      Recycle all metal except tin foil and metal wrappers
-    </div>
-    <a class="flex-row pub-id-lg-btn" id="lobe-track">
-      <div class="pub-id-lg-btn-txt" id="lobe-track-text">
-        Track Item*
-      </div>
-    </a>
 
-    <div class="flex-row pub-id-btn-box">
-      <a class="flex-row pub-btn pub-id-btn" href="./index.html">
-        <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
-        <div class="light-text pub-btn-text">
-          Back
+    <iconify-icon id="lobe-loader" icon="line-md:loading-twotone-loop" width="40" height="40" style="z-index:2; color:black; margin:auto"></iconify-icon>
+
+
+    <div id="lobe-content" style="display:none">
+      <div class="flex-row" style="margin-left: 45px;">
+        <div class="heading-1 pub-id-head" id="lobe-title">
+          Metal
+        </div>
+      </div>
+      <div class="light-text pub-id-text" id="lobe-description">
+        Recycle all metal except tin foil and metal wrappers
+      </div>
+      <a class="flex-row pub-id-lg-btn" id="lobe-track">
+        <iconify-icon id="loader" icon="line-md:loading-twotone-loop" width="25" height="25" style="z-index:2; color:white; display:none;"></iconify-icon>
+        <div class="pub-id-lg-btn-txt" id="lobe-track-text">
+          Track Item*
         </div>
       </a>
-      <a class="flex-row pub-btn pub-id-btn" href="./scan.html">
-        <div class="light-text pub-btn-text">
-          Take another
-        </div>
-        <img src="/imgs/arrow.png" style="height: 15px;">
-      </a>
-    </div>
-
-    <div class="light-text pub-id-text" id="popup-description">
-      *Only track items you recycle
+  
+      <div class="flex-row pub-id-btn-box">
+        <a class="flex-row pub-btn pub-id-btn" href="./index.html">
+          <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
+          <div class="light-text pub-btn-text">
+            Back
+          </div>
+        </a>
+        <a class="flex-row pub-btn pub-id-btn" href="./scan.html">
+          <div class="light-text pub-btn-text">
+            Repeat
+          </div>
+          <img src="/imgs/arrow.png" style="height: 15px;">
+        </a>
+      </div>
+  
+      <div class="light-text pub-id-text" id="popup-description">
+        *Only track items you recycle
+      </div>
     </div>
 
   </div>
 
 
   <div id="finish" class="flex-col popup-box">
-    <img src="/imgs/check-icon.png" style="width: 40px;">
-    <div class="heading-1 pub-text">
-      You're all done!
-    </div>
-    <div class="light-text pub-text">
-      Nice job! You’ve made the world a better place by recycling correctly. Make sure to check for any new badges
-      you’ve earned under the “my rewards” section.
-    </div>
-    <a href="./index.html" class="flex-row pub-btn" id="popup-return">
-      <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
-      <div class="light-text pub-btn-text">
-        Back to home
+    <iconify-icon id="adding-loader" icon="line-md:loading-twotone-loop" width="40" height="40" style="z-index:2; color:black"></iconify-icon>
+    <div id="finish-message" style="display:none">
+      <img src="/imgs/check-icon.png" style="width: 40px;">
+      <div class="heading-1 pub-text">
+        You're all done!
       </div>
-    </a>
+      <div class="light-text pub-text">
+        Nice job! You’ve made the world a better place by recycling correctly. Make sure to check for any new badges
+        you’ve earned under the “my rewards” section.
+      </div>
+      <a href="./index.html" class="flex-row pub-btn" id="popup-return" style="margin-left:30px">
+        <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
+        <div class="light-text pub-btn-text">
+          Back
+        </div>
+      </a>
+    </div>
   </div>
 
 
@@ -179,7 +195,7 @@
       </a>
       <a class="flex-row pub-btn pub-id-btn" href="./scan.html">
         <div class="light-text pub-btn-text">
-          Take another
+          Repeat
         </div>
         <img src="/imgs/arrow.png" style="height: 15px;">
       </a>
