analytics and debugging on mobile

--- a/src/confirm.html
+++ b/src/confirm.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Confirm</title>
   <link href="css/login-pages.css" rel="stylesheet" type="text/css" />
-
+  <link rel="manifest" href="./manifest.json">
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </head>
 
