--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <div class="flex-col content-box">
 
       <div class="flex-row" style="justify-content: space-between;">
-        <div class="subtitle-1">
+        <div class="subtitle-1" id="user-name">
           <p>Hello, John</p>
         </div>
         <a id="signoutbtn">
@@ -220,7 +220,7 @@
         <div class="light-text" style="margin-left: 4px; font-size:15px;">
           Have comments for us?
         </div>
-        <a class="light-text" style="color: #74B9BA; margin-left: 4px; font-size:15px;" target="_blank" href="mailto:wbowers@theplasticproject.org">
+        <a class="light-text" style="color: #74B9BA; margin-left: 4px; font-size:15px;" target="_blank" href="https://forms.gle/yJxKkcXFKUX4cBRp6">
           Send us your feedback
         </a>
       </div>
