--- a/src/no-account.html
+++ b/src/no-account.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>AI page</title>
+  <title>Scan</title>
   <link href="/css/home-page.css" rel="stylesheet" type="text/css" />
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <link rel="manifest" href="../manifest.json">
@@ -29,14 +29,24 @@
           top: 0;
           left: 0;
       }
+
+      .popup-box {
+        height: 275px;
+      }
 </style>
 </head>
 
 <body>
 
-  <iconify-icon id="loading-circle" icon="line-md:loading-twotone-loop" width="50" height="50" class="loading-icon" style="display:none; z-index:2"></iconify-icon>
 
-  <video id="webcam" autoplay></video>
+  <iconify-icon id="loading-circle" icon="line-md:loading-twotone-loop" width="50" height="50" class="loading-icon" style="z-index:1"></iconify-icon>
+  <div class="loading-icon" style="top:60%; margin-left:-50px" id="loading-text">
+    <div class="light-text">
+      Loading model...
+    </div>
+  </div>
+
+  <video id="webcam" autoPlay playsInline muted></video>
   <canvas id="canvas" style="display: none;"></canvas>
   <div class="flex-row tib-box">
     <button id="captureButton">
@@ -45,27 +55,31 @@
       </a>
     </button>
   </div>
-  
 
   <div id="mat-id" class="flex-col popup-box">
-    <img src="/imgs/check-icon.png" style="width: 40px;">
-    <div class="heading-1 pub-text">
-      Material Identified
-    </div>
-    <div class="light-text pub-text">
-      Click the arrow to see your results, track your items, and get one step closer to meeting your recycling goals!
-    </div>
-    <div id="load-first" class="flex-row pub-btn" style="margin-left:0">
-      <div class="light-text pub-btn-text">
-        See results
+    <iconify-icon id="start-loader" icon="line-md:loading-twotone-loop" width="40" height="40" style="z-index:2; color:black"></iconify-icon>
+    <div id="start-message" style="display:none">
+      <img src="/imgs/check-icon.png" style="width: 40px;">
+      <div class="heading-1 pub-text">
+        Material Identified
       </div>
-      <img src="/imgs/arrow.png" style="height: 15px;">
+      <div class="light-text pub-text">
+        Click the arrow to see your results, track your items, and get one step closer to meeting your recycling goals!
+      </div>
+      <div id="load-first" class="flex-row pub-btn" style="margin-left:0">
+        <div class="light-text pub-btn-text">
+          See results
+        </div>
+        <img src="/imgs/arrow.png" style="height: 15px;">
+      </div>  
     </div>
+
+
   </div>
   
 
   <div id="generic-popup" class="flex-col popup-box pub-id-box">
-    <div class="flex-row" style="margin-left: 45px;">
+    <div class="flex-row" style="margin-left: 45px">
       <!-- <img src="/imgs/hammer-icon.png" style="width: 25px;padding-right:10px;" id="popup-img"> -->
       <div class="heading-1 pub-id-head" id="popup-name">
         Metal
@@ -74,6 +88,12 @@
     <div class="light-text pub-id-text" id="popup-description">
       Recycle all metal except tin foil and metal wrappers
     </div>
+    <!-- this btn just does nothing for now -->
+    <a class="flex-row pub-id-lg-btn" id="popup-track">
+      <div class="pub-id-lg-btn-txt" id="popup-track-text">
+        Track Item*
+      </div>
+    </a>
     <div class="flex-row pub-id-btn-box">
       <div id="load-prev" class="flex-row pub-btn pub-id-btn">
         <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
@@ -88,33 +108,47 @@
         <img src="/imgs/arrow.png" style="height: 15px;">
       </div>
     </div>
+
+    <div class="light-text pub-id-text" id="popup-description">
+      *Only track items you recycle
+    </div>
+
   </div>
 
+  <div id="lobe-popup" class="flex-col popup-box pub-id-box">
 
-  <div id="finish" class="flex-col popup-box">
-    <img src="/imgs/check-icon.png" style="width: 40px;">
-    <div class="heading-1 pub-text">
-      You're all done!
-    </div>
-    <div class="light-text pub-text">
-      Nice job! You’ve made the world a better place by recycling correctly. Try making an account
-      with us to track your progress and earn rewards!
-    </div>
-    <div class="flex-row pub-id-btn-box">
-      <a class="flex-row pub-btn pub-id-btn" href="./login.html">
-        <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
-        <div class="light-text pub-btn-text">
-          Quit
+    <iconify-icon id="lobe-loader" icon="line-md:loading-twotone-loop" width="40" height="40" style="z-index:2; color:black; margin:auto"></iconify-icon>
+
+
+    <div id="lobe-content" style="display:none">
+      <div class="flex-row" style="margin-left: 45px;">
+        <div class="heading-1 pub-id-head" id="lobe-title">
+          Metal
         </div>
-      </a>
-      <a class="flex-row pub-btn pub-id-btn" href="./no-account.html">
-        <div class="light-text pub-btn-text">
-          Take another
-        </div>
-        <img src="/imgs/arrow.png" style="height: 15px;">
-      </a>
+      </div>
+      <div class="light-text pub-id-text" id="lobe-description">
+        Recycle all metal except tin foil and metal wrappers
+      </div>
+  
+      <div class="flex-row pub-id-btn-box">
+        <a class="flex-row pub-btn pub-id-btn" href="./index.html">
+          <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
+          <div class="light-text pub-btn-text">
+            Back
+          </div>
+        </a>
+        <a class="flex-row pub-btn pub-id-btn" href="./no-account.html">
+          <div class="light-text pub-btn-text">
+            Repeat
+          </div>
+          <img src="/imgs/arrow.png" style="height: 15px;">
+        </a>
+      </div>
+  
     </div>
+
   </div>
+
 
   <div id="finish" class="flex-col popup-box">
     <iconify-icon id="adding-loader" icon="line-md:loading-twotone-loop" width="40" height="40" style="z-index:2; color:black"></iconify-icon>
@@ -127,42 +161,13 @@
         Nice job! You’ve made the world a better place by recycling correctly. Make sure to check for any new badges
         you’ve earned under the “my rewards” section.
       </div>
-      <a href="./index.html" class="flex-row pub-btn" id="popup-return">
-        <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
-        <div class="light-text pub-btn-text">
-          Back to home
-        </div>
-      </a>
-    </div>
-  </div>
-
-
-
-  <div id="lobe-popup" class="flex-col popup-box pub-id-box">
-    <div class="flex-row" style="margin-left: 45px;">
-      <div class="heading-1 pub-id-head" id="lobe-title">
-        Metal
-      </div>
-    </div>
-    <div class="light-text pub-id-text" id="lobe-description">
-      Recycle all metal except tin foil and metal wrappers
-    </div>
-
-    <div class="flex-row pub-id-btn-box">
-      <a class="flex-row pub-btn pub-id-btn" href="./index.html">
+      <a href="./index.html" class="flex-row pub-btn" id="popup-return" style="margin-left:30px">
         <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
         <div class="light-text pub-btn-text">
           Back
         </div>
       </a>
-      <a class="flex-row pub-btn pub-id-btn" href="./no-account.html">
-        <div class="light-text pub-btn-text">
-          Take another
-        </div>
-        <img src="/imgs/arrow.png" style="height: 15px;">
-      </a>
     </div>
-
   </div>
 
 
@@ -177,15 +182,15 @@
     </div>
 
     <div class="flex-row pub-id-btn-box">
-      <a class="flex-row pub-btn pub-id-btn" href="./login.html">
+      <a class="flex-row pub-btn pub-id-btn" href="./index.html">
         <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
         <div class="light-text pub-btn-text">
-          Quit
+          Back
         </div>
       </a>
-      <a class="flex-row pub-btn pub-id-btn" href="./no-account.html">
+      <a class="flex-row pub-btn pub-id-btn" href="./scan.html">
         <div class="light-text pub-btn-text">
-          Take another
+          Repeat
         </div>
         <img src="/imgs/arrow.png" style="height: 15px;">
       </a>
